Updated events to ensure a good baseline for the DMS Engineering Archive., Moved to model version 3.

--- a/m2a/publish-model.conf
+++ b/m2a/publish-model.conf
@@ -2,43 +2,271 @@ subsystem = M2S
 component = M2Assembly
 
 publish {
-  events=[
-	  {
-	    name=M2Position 
-	    description="This event describes the current position of the M2 mirror in x, y, z , tip and tilt."
-	    maxRate =1
-	    attributes=[
-			  {
-				  name=tip
-				  description="""Current position in tip."""
-				  type=double
-				  units=degree
-			  }
-			  {
-          name=tilt
-				  description="""Current position in tilt."""
-				  type=double
-				  units=degree
-			  }
-			  {
-				  name=piston
-				  description="""Current position in piston."""
-				  type=double
-				  units=m
-			  }
-			  {
-          name=decenter-x
-				  description="""Current position in decenter-x."""
-				  type=double
-				  units=m
-			  }
-			  {
-          name=decenter-y
-				  description="""Current position in decenter-y."""
-				  type=double
-				  units=m
-			  }
+	events = [
+		{
+			name=M2Position
+	    	description="This event describes the current position of the M2 mirror in x, y, z, xRot, yRot"
+	    	maxRate = 1
+			archive = true
+	    	attributes=[
+				{
+					name=m2_inposition
+					description="The M2 Positioner is in position (on the target for simple move or hitched to the trajectory for tracking)"
+					type=boolean
+				}
+				{
+					name=m2_tracking
+					description="True when the M2 Positioner is tracking the trajectory buffer"
+					type=boolean
+				}
+				{
+					name=xPosition
+				  	description="Current X translation position"
+				  	type=double
+				  	units=millimeter
+			  	}
+				{
+					name=yPosition
+				  	description="Current Y translation position"
+				  	type=double
+				  	units=millimeter
+			  	}
+				{
+					name=zPosition
+				  	description="Current Z translation position"
+				  	type=double
+				  	units=millimeter
+			  	}
+				{
+					name=xRotation
+				  	description="Current rotation about the X axis"
+				  	type=double
+				  	units=degree
+			  	}
+				{
+					name=yRotation
+				  	description="Current rotation about the Y axis"
+				  	type=double
+				  	units=degree
+			  	}
 		  ]
 	  }
-  ]
+	  {
+			name=M2LegStatus
+	    	description="This event describes the status of the 6 M2 hexapod legs"
+	    	maxRate = 1
+			archive = true
+	    	attributes=[
+				{
+					name=legPosition
+				  	description="Leg i actual position"
+				  	type=array
+					dimensions: [6]
+					items = {
+						type = double
+					}
+				  	units=millimeter
+			  	}
+				{
+					name=legDemand
+				  	description="Leg i demand position"
+				  	type=array
+					dimensions: [6]
+					items = {
+						type = double
+					}
+				  	units=millimeter
+			  	}
+				{
+					name=legFollowingError
+				  	description="Leg i difference between demand and actual positions"
+				  	type=array
+					dimensions: [6]
+					items = {
+						type = double
+					}
+				  	units=millimeter
+			  	}
+				{
+					name=leg_inposition
+					description="In Position status for each leg"
+					type=array
+					dimensions: [6]
+					items = {
+						type = boolean
+					}
+				}
+				{
+					name=leg_faults
+					description="Set of 7 fault bits for each leg (fatal following error, actuator limit error, encoder error, phasing error, homing error, kinematic error, temperature error)"
+					type=array
+					dimensions: [6][7]
+					items = {
+						type = boolean
+					}
+				}
+		  ]
+	  }
+	  {
+			name=M2LateralStatus
+	    	description="This event describes the status of the 16 M2 Lateral Actuators"
+	    	maxRate = 1
+			archive = true
+	    	attributes=[
+				{
+					name=totalForce
+				  	description="Total force from all actuators"
+				  	type=double
+				  	units=newton
+			  	}
+				{
+					name=sectorTotalForce
+				  	description="Total force appled by all actuators of each definer sector"
+				  	type=array
+					dimensions: [3]
+					items = {
+						type = double
+					}
+				  	units=newton
+			  	}
+				{
+					name=appliedForce
+				  	description="Applied force by actuator i as measured with load cell"
+				  	type=array
+					dimensions: [16]
+					items = {
+						type = double
+					}
+				  	units=newton
+			  	}
+				{
+					name=forceSetPoint
+				  	description="Force set point by actuator i"
+				  	type=array
+					dimensions: [16]
+					items = {
+						type = double
+					}
+				  	units=newton
+			  	}
+				{
+					name=actuatorState
+				  	description="Actuator i finite state"
+				  	type=array
+					dimensions: [16]
+					items = {
+						enum = [IDLE, CTRL_OFF, CTRL_ON, READY, FAST_EMPTY, CONFIG, TEST, CAN_ERR]
+					}
+			  	}
+				{
+					name=actuatorTemperature
+				  	description="Actuator i load cell temperature"
+				  	type=array
+					dimensions: [16]
+					items = {
+						type = double
+					}
+				  	units=degC
+			  	}
+		  ]
+	  }
+	  {
+			name=M2DefinerStatus
+	    	description="This event describes the status of the 3 M2 Lateral Definers"
+	    	maxRate = 1
+			archive = true
+	    	attributes=[
+				{
+					name=appliedForce
+				  	description="Applied force by definer i as measured with load cell"
+				  	type=array
+					dimensions: [3]
+					items = {
+						type = double
+					}
+				  	units=newton
+			  	}
+				{
+					name=forceSetPoint
+				  	description="Force set point by definer i"
+				  	type=array
+					dimensions: [3]
+					items = {
+						type = double
+					}
+				  	units=newton
+			  	}
+				{
+					name=ZcomponentForce
+				  	description="Gravity Z component force (Deduced from zenital angle)"
+				  	type=double
+					units=newton
+			  	}
+		  ]
+	  }
+	  {
+			name=M2Sensors
+	    	description="This event describes M2 Sensor Readings"
+	    	maxRate = 1
+			archive = true
+	    	attributes=[
+				{
+					name=axialPosition
+				  	description="M2 Axial position i"
+				  	type=array
+					dimensions: [3]
+					items = {
+						type = double
+					}
+				  	units=micrometer
+			  	}
+				{
+					name=lateralPosition
+				  	description="M2 Lateral position i"
+				  	type=array
+					dimensions: [3]
+					items = {
+						type = double
+					}
+				  	units=micrometer
+			  	}
+				{
+					name=inclinometer
+				  	description="M2 Cell inclinometer measured altitude angle (0 deg: zenith)"
+				  	type=double
+					units=degree
+			  	}
+				{
+					name=mirrorTemperatures
+				  	description="Mirror temperature sensor i"
+				  	type=array
+					dimensions: [3]
+					items = {
+						type = double
+					}
+				  	units=degC
+			  	}
+				{
+					name=structureTemperatures
+				  	description="Structure temperature sensor i"
+				  	type=array
+					dimensions: [3]
+					items = {
+						type = double
+					}
+				  	units=degC
+			  	}
+				{
+					name=positionerTemperatures
+				  	description="Positioner temperature sensor i"
+				  	type=array
+					dimensions: [3]
+					items = {
+						type = double
+					}
+				  	units=degC
+			  	}
+		  ]
+	  }
+	]
 }
