Updates based on M2SSP Interface updates (TIO.OPT.TEC.24.171.REL01)

--- a/m2a/publish-model.conf
+++ b/m2a/publish-model.conf
@@ -4,18 +4,57 @@ component = M2Assembly
 publish {
 	events = [
 		{
-			name=M2Position
-	    	description="This event describes the current position of the M2 mirror in x, y, z, xRot, yRot"
+			name=M2Status
+	    	description="This event describes the top level status of the M2 system"
 	    	maxRate = 1
 			archive = true
 	    	attributes=[
 				{
-					name=m2_inposition
+					name=altitude
+					description="Altitude position received from the TCS"
+					type=double
+					units=degree
+				}
+				{
+					name=plc_io_ok
+					description="If false, at least one PLC I/O is in fault state"
+					type=boolean
+				}
+				{
+					name=plc_heartbeat
+					description="Heartbeat to indicate the PLC is responsive"
+					type=integer
+				}
+				{
+					name=m2a_heartbeat
+					description="Heartbeat to indicate the m2 assembly is responsive"
+					type=integer
+				}
+			]
+		}
+		{
+			name=M2Position
+	    	description="This event describes the status of the M2 hexapod positioner"
+	    	maxRate = 1
+			archive = true
+	    	attributes=[
+				{
+					name=enabled
+					description="All legs are enabled when True"
+					type=boolean
+				}
+				{
+					name=moving
+					description="At least one leg is moving when True"
+					type=boolean
+				}
+				{
+					name=inPosition
 					description="The M2 Positioner is in position (on the target for simple move or hitched to the trajectory for tracking)"
 					type=boolean
 				}
 				{
-					name=m2_tracking
+					name=tracking
 					description="True when the M2 Positioner is tracking the trajectory buffer"
 					type=boolean
 				}
@@ -58,7 +97,7 @@ publish {
 			archive = true
 	    	attributes=[
 				{
-					name=legPosition
+					name=position
 				  	description="Leg i actual position"
 				  	type=array
 					dimensions: [6]
@@ -68,15 +107,42 @@ publish {
 				  	units=millimeter
 			  	}
 				{
-					name=legDemand
-				  	description="Leg i demand position"
+					name=current
+				  	description="Leg i motor current"
 				  	type=array
 					dimensions: [6]
 					items = {
 						type = double
 					}
-				  	units=millimeter
+				  	units=ampere
 			  	}
+				{
+					name=initialized
+					description="System Initialized status for each leg"
+					type=array
+					dimensions: [6]
+					items = {
+						type = boolean
+					}
+				}
+				{
+					name=enabled
+					description="Amplifier Enabled status for each leg"
+					type=array
+					dimensions: [6]
+					items = {
+						type = boolean
+					}
+				}
+				{
+					name=inPosition
+					description="In Position status for each leg"
+					type=array
+					dimensions: [6]
+					items = {
+						type = boolean
+					}
+				}
 				{
 					name=legFollowingError
 				  	description="Leg i difference between demand and actual positions"
@@ -87,46 +153,58 @@ publish {
 					}
 				  	units=millimeter
 			  	}
-				{
-					name=leg_inposition
-					description="In Position status for each leg"
-					type=array
-					dimensions: [6]
-					items = {
-						type = boolean
-					}
-				}
-				{
-					name=leg_faults
-					description="Set of 7 fault bits for each leg (fatal following error, actuator limit error, encoder error, phasing error, homing error, kinematic error, temperature error)"
-					type=array
-					dimensions: [6][7]
-					items = {
-						type = boolean
-					}
-				}
 		  ]
 	  }
 	  {
 			name=M2LateralStatus
-	    	description="This event describes the status of the 16 M2 Lateral Actuators"
+	    	description="This event describes the status of the 16 M2 Lateral Actuators in the M2 Cell"
 	    	maxRate = 1
 			archive = true
 	    	attributes=[
 				{
+					name=lateralState
+				  	description="General State of the Lateral Support subsystem"
+					enum = [Standby, Starting, Running, Shutting Down, Error]
+			  	}
+				{
+					name=startupStep
+				  	description="Start-Up procedure current step"
+					enum = [Standby, Safety valve opening, Actuator control on, Gravity feed-forward on, Definer loop on]
+			  	}
+				{
+					name=shutdownStep
+				  	description="Shut-Down procedure current step"
+					enum = [Standby, Definer loop off, Gravity feed-forward off, Actuator control off, Safety valve closing]
+			  	}
+				{
+					name=safetyValveOn
+					description="True when the safety shutoff valve is On (actuators under pressure)"
+					type=boolean
+				}
+				{
+					name=actuatorsOn
+					description="True when actuators control is running"
+					type=boolean
+				}
+				{
+					name=gravityOn
+					description="True when gravity feed-forward is running"
+					type=boolean
+				}
+				{
+					name=definersOn
+					description="True when definers force loop is running"
+					type=boolean
+				}
+				{
+					name=correctionsOn
+					description="True when corrections forces is running"
+					type=boolean
+				}
+				{
 					name=totalForce
 				  	description="Total force from all actuators"
 				  	type=double
-				  	units=newton
-			  	}
-				{
-					name=sectorTotalForce
-				  	description="Total force appled by all actuators of each definer sector"
-				  	type=array
-					dimensions: [3]
-					items = {
-						type = double
-					}
 				  	units=newton
 			  	}
 				{
@@ -172,7 +250,7 @@ publish {
 	  }
 	  {
 			name=M2DefinerStatus
-	    	description="This event describes the status of the 3 M2 Lateral Definers"
+	    	description="This event describes the status of the 3 M2 Lateral Definers in the M2 Cell"
 	    	maxRate = 1
 			archive = true
 	    	attributes=[
@@ -198,7 +276,7 @@ publish {
 			  	}
 				{
 					name=ZcomponentForce
-				  	description="Gravity Z component force (Deduced from zenital angle)"
+				  	description="Gravity Z component force (Deduced from altitude angle)"
 				  	type=double
 					units=newton
 			  	}
@@ -210,32 +288,6 @@ publish {
 	    	maxRate = 1
 			archive = true
 	    	attributes=[
-				{
-					name=axialPosition
-				  	description="M2 Axial position i"
-				  	type=array
-					dimensions: [3]
-					items = {
-						type = double
-					}
-				  	units=micrometer
-			  	}
-				{
-					name=lateralPosition
-				  	description="M2 Lateral position i"
-				  	type=array
-					dimensions: [3]
-					items = {
-						type = double
-					}
-				  	units=micrometer
-			  	}
-				{
-					name=inclinometer
-				  	description="M2 Cell inclinometer measured altitude angle (0 deg: zenith)"
-				  	type=double
-					units=degree
-			  	}
 				{
 					name=mirrorTemperatures
 				  	description="Mirror temperature sensor i"
@@ -266,6 +318,11 @@ publish {
 					}
 				  	units=degC
 			  	}
+				{
+					name=compressedAirOk
+					description="True when the pneumatic circuit pressure is above 5 bars"
+					type=boolean
+				}
 		  ]
 	  }
 	]
