Added M2 Health to the publish model

--- a/m2a/publish-model.conf
+++ b/m2a/publish-model.conf
@@ -86,6 +86,30 @@ publish {
 		  ]
 	  }
 	  {
+			name=M2Health
+			description="This event describes M2S Health"
+			maxRate=1
+			archive=true
+			attributes=[
+				{
+					name=Health
+					description="This is overall M2S health."
+					enum=[Good,Ill,Bad,INTERLOCKED,UNKNOWN]
+				}
+				{
+					name=Reason
+					description="This is the Health Message"
+					type=string
+				}
+				{
+					name=time
+					description="This is the Time of Health Event Publishing"
+					type=double
+					units=tai
+				}	
+			]
+	  }
+	  {
 			name=M2LegStatus
 	    	description="This event describes the status of the 6 M2 hexapod legs"
 	    	maxRate = 1
